# gnd

./: .gitattributes  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  agents.md  lychee.toml
.agents/: gnd.toml  grund.toml
.github/workflows/: auto-bump.yml  ci.yml  pre-release-checks.yml  release-minor.yml  release-registry-names.yml  release.yml  weekly-patch-release.yml
benches/: instructions.rs
crates/grund-cli/: Cargo.toml
crates/grund-cli/benches/: instructions.rs
crates/grund-cli/src/: cli.rs  cli_help.rs  lib.rs  main.rs
crates/grund-cli/tests/: e2e.rs  init.rs
crates/grund-cli/tests/support/: case_runner.rs
crates/grund-core/: Cargo.toml  README.md
crates/grund-core/assets/skills/grund-init/: SKILL.md
crates/grund-core/assets/templates/: AGENTS.md  grund.toml
crates/grund-core/src/: api.rs  checker.rs  checker_cmd.rs  cli.rs  cli_help.rs  compat_cli.rs  completions.rs  config.rs  cover.rs  fmt.rs  fmt_links.rs  grammar.rs  id.rs  init.rs  init_templates.rs  lib.rs  list.rs  model.rs  output.rs  refs.rs  scanner.rs  show.rs  show_render.rs  tests.rs  workspace_context.rs
crates/grund-lsp/: Cargo.toml
crates/grund-lsp/src/: lib.rs  main.rs
crates/grund-lsp/tests/: shutdown.rs
docs/: benchmarks.md  changelog.md  goals.md  grund.md  project-improvements.md  raison-detre.md  roadmap.md  state-and-direction.md
docs/architectural-spec/: AS-001-scanner.md  AS-002-checker.md  AS-003-bindings.md  AS-benchmarks.md  AS-bindings.md  AS-checker.md  AS-ci.md  AS-lsp.md  AS-scanner.md  README.md
docs/architecture/: AR-benchmarks.md  AR-bindings.md  AR-checker.md  AR-ci.md  AR-core-module-layout.md  AR-lsp.md  AR-scanner.md  AR-workspace.md  README.md
docs/changelog/: 0.1.0.md  0.2.0.md  0.3.0.md
docs/decisions/architectural/: DA-001-reference-checker-name.md  DA-benchmark-instruction-counting.md  DA-lsp-optional.md  DA-pgo-release.md  DA-pypi-package-name.md  DA-pypi-uses-grund-as-the-package-name.md  DA-reference-checker-name.md  DA-rename-to-grund.md
docs/decisions/functional/: DF-001-reference-marker.md  DF-code-declarations-drop-hash.md  DF-declaration-anchor.md  DF-github-anchor-fidelity.md  DF-id-number-width.md  DF-keep-id-for-pure-id-allocation-and-reserve-new-for-stub.md  DF-md-link-anchor-strategy.md  DF-md-link-default-on.md  DF-md-link-emission.md  DF-reference-marker.md  DF-require-grounding.md  DF-show-cross-ref-flattening.md  DF-show-default-token-cheap.md  DF-show-keep-explicit-form.md  DF-show-token-cheap-reads.md  DF-skill-init-existing-specs.md  DF-subproject-namespaces.md
docs/discussions/: DISC-release-product-management-run.md  README.md
docs/discussions/proposals/: 2026-05-09-external-ticket-resolvers.md  2026-05-09-link-support.md  2026-05-12-token-cheap-grounding.md  2026-05-16-subproject-namespaces.md  2026-05-17-init-workspace-members.md  2026-05-19-skill-init-existing-specs.md
docs/functional-spec/: FS-001-check.md  FS-002-show.md  FS-003-ide-plugins.md  FS-004-distribution.md  FS-005-fmt.md  FS-006-config.md  FS-007-non-goals.md  FS-008-init.md  FS-009-name.md  FS-check.md  FS-cli.md  FS-completions.md  FS-config.md  FS-cover.md  FS-distribution.md  FS-errors.md  FS-examples.md  FS-fmt.md  FS-id.md  FS-ide-plugins.md  FS-init-fixtures.md  FS-init.md  FS-inline-citation-style.md  FS-list.md  FS-lsp.md  FS-name.md  FS-non-goals.md  FS-output-shapes.md  FS-refs.md  FS-show.md  FS-workspace.md  README.md
docs/goals/: goals.md
e2e/: README.md
e2e/cases/basic-markdown-dangling/: expected.stderr  spec.refs
e2e/cases/basic-markdown-duplicate/: expected.stderr  expected.stdout  spec.refs
e2e/cases/basic-markdown-missing-section/: expected.stderr  expected.stdout  spec.refs
e2e/cases/basic-markdown-valid/: spec.refs
e2e/cases/check-agents-missing-init-block/: expected.stderr  expected.stdout
e2e/cases/check-agents-old-version/: expected.stderr  expected.stdout  spec.refs
e2e/cases/check-claude-missing-init-block/: expected.stdout  spec.refs
e2e/cases/check-empty-json/: command.args  expected.stderr  spec.refs
e2e/cases/check-empty-scan-warning/: expected.stderr
e2e/cases/check-extra-path-arg/: command.args  expected.stderr  spec.refs
e2e/cases/check-require-grounding-flag/: command.args  expected.stderr  spec.refs
e2e/cases/check-unreadable-file-continues/: expected.stderr  expected.stdout  spec.refs
e2e/cases/cli-bare-path-requires-check/: command.args  expected.stderr
e2e/cases/cli-help-agent-setup-instructions/: command.args  expected.stdout  spec.refs
e2e/cases/cli-help-completions/: command.args  expected.stdout
e2e/cases/cli-help-config/: command.args  expected.stdout
e2e/cases/cli-help-cover/: command.args  expected.stdout  spec.refs
e2e/cases/cli-help-fmt/: command.args  expected.stdout
e2e/cases/cli-help-id/: command.args  expected.stdout
e2e/cases/cli-help-init/: command.args  expected.stdout
examples/: README.md
examples/parallel-spec-review-example/: README.md  index.rhei.md  states.yaml
examples/scheme-numbered/: README.md
examples/scheme-numbered-slug/: README.md
examples/scheme-slug/: README.md
examples/workspace/: README.md
scripts/: check-no-claude-attribution.sh  check-registry-names.sh  check_changelog_pr_entry.py  generate_large_benchmark_fixture.py  local-benchmark-report.py  pgo-build.sh  prepare_changelog_release.py
skills/gnd-init/: SKILL.md
skills/grund-init/: SKILL.md
src/: checker.rs  cli_help.rs  completions.rs  config.rs  cover.rs  fmt_links.rs  grammar.rs  id.rs  init.rs  init_templates.rs  lib.rs  main.rs  model.rs  output.rs  scanner.rs  show.rs  show_render.rs  tests.rs
templates/: AGENTS.md  agents.md  architectural-spec-README.md  architecture-README.md  e2e-README.md  functional-spec-README.md  gnd.toml  goals.md  grund.md  grund.toml  raison-detre.md  state-and-direction.md
tests/: e2e.rs  examples.rs  init.rs  test_check_changelog_pr_entry.py  test_generate_large_benchmark_fixture.py  test_prepare_changelog_release.py  test_skill_asset_sync.py
tests/support/: case_runner.rs
(+890 files in other folders)
