[package]
name = "grund"
version = "0.1.0"
edition = "2024"
description = "The polyglot reference checker: validate and read ID-based citations across Markdown docs and source-code doc-comments."
keywords = ["documentation", "references", "linter", "agents", "cli"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
repository = "https://github.com/vjovanov/grund"
homepage = "https://github.com/vjovanov/grund"
readme = "README.md"
exclude = [
    ".agents/rhei/**",
    "Cargo.toml.orig",
    "target/**",
]

[dependencies]
ignore = "0.4"
regex = "1"
anyhow = "1"
once_cell = "1"
unicode-normalization = "0.1"

[profile.release]
lto = true
codegen-units = 1
# Distributed release binaries are additionally profile-guided-optimized via
# `scripts/pgo-build.sh` (training run = the benchmark workload — §AR-benchmarks,
# §DA-pgo-release). PGO is a multi-phase generate/run/rebuild pipeline that needs
# a profile absent on a fresh clone, so it cannot live here or in the dev loop;
# a plain `cargo build --release` (and `cargo install grund`) is LTO-only and
# behaviour-identical.

[dev-dependencies]
iai-callgrind = "0.16.1"

[features]
# Gates the real `instructions` benchmark body (below). Off by default so
# `cargo test --all-targets` / `cargo build --all-targets` compile only a no-op
# bench target and never need Valgrind; run the benchmarks with
# `cargo bench --features bench` (CI installs the toolchain — see
# `.github/workflows/ci.yml`).
bench = []

# Instruction-counting benchmarks for the hot CLI commands (§AR-benchmarks).
# `harness = false` hands the entry point to iai-callgrind's `main!` macro under
# `--features bench`; without the feature the target is a no-op `fn main`, so the
# default build/test matrix compiles it but never needs Valgrind.
[[bench]]
name = "instructions"
harness = false
