[workspace]
members = ["crates/grund-core", "crates/grund-cli", "crates/grund-lsp"]
default-members = ["crates/grund-cli"]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/vjovanov/grund"
homepage = "https://github.com/vjovanov/grund"

[profile.release]
lto = true
codegen-units = 1
# Distributed release binaries are additionally profile-guided-optimized via
# `scripts/pgo-build.sh` (training run = the benchmark workload — §AR-benchmarks,
# §DA-pgo-release). PGO is a multi-phase generate/run/rebuild pipeline that needs
# a profile absent on a fresh clone, so it cannot live here or in the dev loop;
# a plain `cargo build --release` (and `cargo install grund`) is LTO-only and
# behaviour-identical.
