[package]
name = "grund-core"
version = "0.2.0"
edition = "2024"
description = "Core engine for grund: scanner, checker, show, fmt, config, and shared command dispatcher."
keywords = ["documentation", "references", "linter", "agents"]
categories = ["development-tools"]
license = "MIT"
repository = "https://github.com/vjovanov/grund"
homepage = "https://github.com/vjovanov/grund"
readme = "README.md"
include = ["src/**", "assets/**", "Cargo.toml", "README.md"]

[dependencies]
ignore = "0.4"
regex = "1"
anyhow = "1"
once_cell = "1"
unicode-normalization = "0.1"
