[package]
name = "grund-core"
version = "0.4.0"
edition.workspace = true
description = "Core engine for grund: scanner, checker, show, fmt, config, and shared data APIs."
keywords = ["documentation", "references", "linter", "agents"]
categories = ["development-tools"]
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
include = ["src/**", "assets/**", "Cargo.toml", "README.md"]

[dependencies]
ignore = "0.4"
regex = "1"
anyhow = "1"
once_cell = "1"
rayon = "1"
unicode-normalization = "0.1"
